user2tasks, delete app
